feat: new documentation